Fix agent list to include non-pod agents via heartbeat detection and add heartbeat support to analytics-agent (#142)
* Initial plan

* Fix agent availability list to include non-pod agents with recent heartbeats

Co-authored-by: phrocker <1781585+phrocker@users.noreply.github.com>

* Add comprehensive tests for agent availability with recent heartbeats

Co-authored-by: phrocker <1781585+phrocker@users.noreply.github.com>

* Improve exception handling to catch RuntimeException instead of broad Exception

Co-authored-by: phrocker <1781585+phrocker@users.noreply.github.com>

* Add RegisteredAnalyticsAgent to send heartbeats for analytics/java-agent

Co-authored-by: phrocker <1781585+phrocker@users.noreply.github.com>

* Fix heartbeat deletion - only remove stale heartbeats (10+ min old), not on ping failure

Co-authored-by: phrocker <1781585+phrocker@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: phrocker <1781585+phrocker@users.noreply.github.com>